migrate to JDK 8, fixed logging